# TaskManager

./: CMakeLists.txt  README.md
header/: model.h  taskGroup.h  tasks.h  tasksGroup.h  tasksGroupMap.h  users.h  view.h
src/: FieldsValidator.cpp  Password.cpp  main.cpp  model.cpp  task.cpp  taskGroup.cpp  tasks.cpp  tasksGroup.cpp  tasksGroupMap.cpp  users.cpp  view.cpp
test/: CMakeLists.txt  testusers.cpp
